--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'application'
+    id 'org.jetbrains.kotlin.jvm' version '1.9.22'
 }
 
 group = 'com.line.review'
@@ -13,6 +14,9 @@ repositories {
 }
 
 dependencies {
+    // Kotlin
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.9.22'
+    
     // JUnit 5 for testing
     testImplementation 'org.junit.jupiter:junit-jupiter:5.10.1'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
@@ -43,6 +47,21 @@ compileJava {
 
 compileTestJava {
     options.encoding = 'UTF-8'
+}
+
+// Kotlin 컴파일 설정
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = '21'
+        languageVersion = '1.9'
+    }
+}
+
+compileTestKotlin {
+    kotlinOptions {
+        jvmTarget = '21'
+        languageVersion = '1.9'
+    }
 }
 
 // Gradle Wrapper 설정
